# pokedex

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.py
app/common/by/: index.html
app/common/error_handler/: index.html
app/common/exceptions/: index.html
app/common/pokemon/: index.html
app/common/pokemon_type/: index.html
app/controllers/pokemon_delete_controller/: index.html
app/main/process_handle/: index.html
cli_usage/: index.html
docs/: cli_usage.md  index.md  installation.md  project_overview.md
docs/stylesheets/: extra.css
init/: schema.sql
installation/: index.html
project_overview/: index.html
src/common/: by.py  error_handler.py  exceptions.py  pokemon.py  pokemon_type.py
src/controllers/: pokemon_delete_controller.py  pokemon_find_all_controller.py  pokemon_find_controller.py  pokemon_register_controller.py  pokemon_update_controller.py
src/main/: process_handle.py
src/models/: by.py
src/resources/: introduction.md
src/validators/: __init__.py  pokemon_data_validator.py  pokemon_find_validator.py  pokemon_query_validator.py  pokemon_register_validator.py  pokemon_update_validator.py
src/views/: introduction_view.py  pokemon_delete_view.py  pokemon_find_all_view.py  pokemon_find_view.py  pokemon_register_view.py  pokemon_update_view.py  utils.py
stylesheets/: extra.css
tests/constructors/: pokemon_register_constructor_test.py
tests/controllers/: pokemon_register_controller_test.py
tests/views/: pokemon_register_view_test.py
(+88 files in other folders)
